--- a/Client/GroApp/res/layout/activity_login.xml
+++ b/Client/GroApp/res/layout/activity_login.xml
@@ -68,6 +68,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:background="#649b3f"
             android:height="100dp"
             android:onClick="goToMain"
             android:text="@string/action_sign_in_short"
