Login functionality working, registration working, looking good

--- a/Client/GroApp/res/layout/activity_login.xml
+++ b/Client/GroApp/res/layout/activity_login.xml
@@ -98,6 +98,8 @@
              android:layout_below="@+id/password"
              android:layout_marginTop="45dp"
              android:paddingLeft="4dp"
+             android:onClick="goToRegister"
+             android:clickable="true"
              android:text="Register new account"
              android:textColor="@color/blue" />
 
