--- a/Client/GroApp/res/layout/take_photo.xml
+++ b/Client/GroApp/res/layout/take_photo.xml
@@ -38,7 +38,7 @@
         android:layout_marginTop="10dp"
         android:layout_toRightOf="@id/fridgeButton"
         android:background="@drawable/chef31"
-         android:onClick="onRequestClick" />
+         android:onClick="goToShopping" />
 
     <ImageButton
         android:id="@+id/shoppingButton"
